# DiffCSP

./: .gitignore  pyproject.toml
conf/logging/: default.yaml
conf/train/: default.yaml
diffcsp/: run.py
diffcsp/common/: data_utils.py
diffcsp/pl_data/: datamodule.py  dataset.py
diffcsp/pl_modules/: diffusion_w_type.py  model.py
diffcsp/pl_modules/lattice/: crystal_family.py
