[tool.poetry]
name = "diffcsp++"
version = "0.1.0"
description = ""
authors = ["Nikita Kazeev <kazeevn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytorch-lightning = "^2.4.0"
pytorch-triton = {path = "/mnt/hdd/torch_wheels/pytorch_triton-3.1.0+cf34004b8a-cp312-cp312-linux_x86_64.whl"}
torch = {path = "/mnt/hdd/torch_wheels/torch-2.6.0a0+git3cbf0c0-cp312-cp312-linux_x86_64.whl"}
torch-scatter = {path = "/mnt/hdd/torch_wheels/torch_scatter-2.1.2-cp312-cp312-linux_x86_64.whl"}
torch-sparse = {path = "/mnt/hdd/torch_wheels/torch_sparse-0.6.18-cp312-cp312-linux_x86_64.whl"}
pymatgen = "^2024.11.13"
torch-geometric = "^2.6.1"
hydra-core = "^1.3.2"
smact = "^2.8"
scikit-learn = "^1.5.2"
p-tqdm = "^1.4.2"
pyxtal = "^1.0.5"
python-dotenv = "^1.0.1"
chemparse = "^0.3.1"
einops = "^0.8.0"
wandb = "^0.18.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
